force-app/main/default/objects/TREX1__Session__c/fields/BPC_Admin_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>BPC_Admin_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPC Admin GL Account</label>
    <referenceTo>TREX1__GL_Account__c</referenceTo>
    <relationshipLabel>Sessions (BPC Admin)</relationshipLabel>
    <relationshipName>BPC_Admin_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>