force-app/main/default/objects/TREX1__Session__c/fields/BPC_Free_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>BPC_Free_Membership_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPC Free Membership Type</label>
    <referenceTo>TREX1__Membership_Type__c</referenceTo>
    <relationshipLabel>Sessions (BPC)</relationshipLabel>
    <relationshipName>BPC_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>