force-app/main/default/objects/TREX1__Session__c/fields/BPC_Other_Fees_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>BPC_Other_Fees_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPC Other Fees GL Account</label>
    <referenceTo>TREX1__GL_Account__c</referenceTo>
    <relationshipLabel>Sessions (BPC Other Fees)</relationshipLabel>
    <relationshipName>BPC_Other_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>