force-app/main/default/objects/TREX1__Session__c/fields/Free_Product__c.field-meta.xml
<CustomField>
    <fullName>Free_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Free Product</label>
    <referenceTo>TREX1__Product__c</referenceTo>
    <relationshipLabel>Sessions (Free Product)</relationshipLabel>
    <relationshipName>Free_Product_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>