force-app/main/default/objects/TREX1__Session__c/fields/UES_Admin_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>UES_Admin_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UES Admin GL Account</label>
    <referenceTo>TREX1__GL_Account__c</referenceTo>
    <relationshipLabel>Sessions (UES Admin)</relationshipLabel>
    <relationshipName>UES_Admin_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>