force-app/main/default/objects/TREX1__Session__c/fields/UES_Free_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>UES_Free_Membership_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UES Free Membership Type</label>
    <referenceTo>TREX1__Membership_Type__c</referenceTo>
    <relationshipLabel>Sessions (UES)</relationshipLabel>
    <relationshipName>UES_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>