force-app/main/default/objects/TREX1__Session__c/fields/UES_Other_Fees_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>UES_Other_Fees_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UES Other Fees GL Account</label>
    <referenceTo>TREX1__GL_Account__c</referenceTo>
    <relationshipLabel>Sessions (UES Other Fees)</relationshipLabel>
    <relationshipName>UES_Other_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>